tests/compile_fail/custom_impl_compat.stderr
error[E0080]: evaluation panicked:
              assertion failed.
              When implementing `ShaderLayoutCompat`, field `Compat::a2` is not properly aligned. The offset is 8 but required align is 16

  --> tests/compile_fail/custom_impl_compat.rs:17:1
   |
17 | / shader_layout_compat! {
18 | |
19 | |     pub struct Compat {
20 | |         a1: glam::Vec2,
...  |
25 | | }
   | |_^ evaluation of `_::_` failed here
   |
   = note: this error originates in the macro `shader_layout_compat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
